--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,56 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+
+    background-size:contain;
+    background-position:top;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.inputs {
+  border: 2px solid blue;
+
+  left: 30%;
+  height: auto;
+  top: 20%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.span {
+   top: 10%;
+   border: 2px solid blue;
+  border-radius: 25px;
+    width: 30rem;
+    height: 40rem;
+    margin: 0.5rem;
+    background-color: azure;
+    display:inline-flex;
 }
 
-.App-link {
-  color: #61dafb;
+.leftside{
+
+  text-align: center;
+  position: absolute;
+  left: 34.5%;
+  height: auto;
+  top:20%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rightside{
+
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top:20%;
+  height: auto;
+
 }
+
+.btn
+{
+  position: absolute;
+  left: 47.5%;
+  top:77%;
+
+  height: auto;
+}
+
