--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,20 @@
 .App {
-  text-align: center;
+    text-align: center;
+    align-items: center;
 }
 
-body{
 
-    background-size:contain;
-    background-position:top;
-}
-
-.inputs {
-  border: 2px solid blue;
-
-  left: 30%;
-  height: auto;
-  top: 20%;
-}
-
-.span {
-   top: 10%;
-   border: 2px solid blue;
-  border-radius: 25px;
-    width: 30rem;
-    height: 40rem;
-    margin: 0.5rem;
-    background-color: azure;
-    display:inline-flex;
-}
-
-.leftside{
-
-  text-align: center;
-  position: absolute;
-  left: 34.5%;
-  height: auto;
-  top:20%;
-}
-
-.rightside{
-
-  text-align: center;
-  position: absolute;
-  left: 50%;
-  top:20%;
-  height: auto;
+body {
+    /*background-image: url("QVGh.gif");*/
+    background:url('QVGh.gif') repeat-y;
+    /*background-repeat: no-repeat;*/
+    background-position: center;
+    background-size: cover;
+    /*!*background-size: 100%;*!*/
+    /*width: 100%;*/
+    height:100%;
+    width:100%;
 
 }
 
-.btn
-{
-  position: absolute;
-  left: 47.5%;
-  top:77%;
-
-  height: auto;
-}
 
